# SmithWagnerCV

./: README.md  pyproject.toml  setup.py  test.py
SmithWagnerCV/: Methods.py  __init__.py
src/SmithWagnerCV/: __init__.py
